# wb_bot

./: .dockerignore  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yaml  pre-commit.yaml
infra/: docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml
src/bot/: handlers.py  keyboards.py  main.py  service.py  texts.py
src/config/: config.py  config.yaml
